# polytonic-greek

./: .gitignore  Cargo.toml  README.md  gktest.csv
.github/workflows/: rust.yml
src/: lib.rs  main.rs  tables.rs
