[package]
name = "rustunicodetests"
version = "0.1.0"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# compile: https://dev.to/dandyvica/wasm-in-rust-without-nodejs-2e0c
# cargo build --target wasm32-unknown-unknown
# wasm-bindgen --target web --no-typescript --out-dir target/wasm32-unknown-unknown/debug/ target/wasm32-unknown-unknown/debug/hoplitekb_wasm_rs.wasm

### wasm-gc target/wasm32-unknown-unknown/debug/hoplitekb_wasm_rs_bg.wasm

# cp target/wasm32-unknown-unknown/debug/hoplitekb_wasm_rs_bg.wasm ~/Sites/hoplitekb-wasm-rs/
# cp target/wasm32-unknown-unknown/debug/hoplitekb_wasm_rs.js ~/Sites/hoplitekb-wasm-rs/

[lib]
doctest = false # don't run Doc-tests for now

[dependencies]
unicode-normalization = { version = "0.1.17", default-features = false }

# [dependencies.tinyvec]
# version = "1"
# features = ["alloc"]

[profile.release]
lto = true
opt-level = "z"
